# UrbanHub-EC03

./: docker-compose.yml  sonar-project.properties
ms-analyse-trafic/: Docker-compose.yml  Dockerfile  Dockerfile.test  analyse_trafic.db  db_analyse_trafic.sql  prompt.py  pyproject.toml
ms-analyse-trafic/.github/workflows/: ci.yml  ci_analyse-trafic.yml
ms-analyse-trafic/src/: main.py
ms-analyse-trafic/src/adapters/inbound/: controller.py  kafka_collecte_consumer.py
ms-analyse-trafic/src/adapters/outbound/models/: indicateur_model.py  score_congestion_model.py
ms-analyse-trafic/src/adapters/outbound/publishers/: kafka_alerte_publisher.py  noop_alerte_publisher.py
ms-analyse-trafic/src/adapters/outbound/repositories/: postgres_indicateur_repository.py  postgres_score_repository.py
ms-analyse-trafic/src/application/dto/: dto.py
ms-analyse-trafic/src/application/ports/inbound/: analyse_trafic_port.py  collecte_consumer.py
ms-analyse-trafic/src/application/ports/outbound/: alerte_publisher.py  indicateur_repository.py  (+1 more)
ms-analyse-trafic/src/application/use_cases/: analyser_mesure_trafic_usecase.py
ms-analyse-trafic/src/domain/entities/: indicateur_trafic.py  mesure_trafic.py  resultat_analyse.py  score_congestion.py
ms-analyse-trafic/src/domain/repositories/: postgres_indicateur_repository.py
ms-analyse-trafic/src/domain/services/: analyse_trafic_service.py
ms-analyse-trafic/tests/: test_analyse_api.py  test_analyse_service.py  test_health.py  test_kafka_consumer.py  test_kafka_publisher.py  test_use_case.py
ms6-validateur-capteur/: 01_presentation.md  02_pipeline.md  03_sonarcloud.md  04_snyk.md  05_guide_prise_en_main.md  06_evolutivite.md  Dockerfile  flake8_apres.txt  flake8_avant.txt  pyproject.toml  rapport_tests.xml  rapport_validation.txt  requirements.txt  snyk_apres.txt  snyk_avant.txt
ms6-validateur-capteur/src/: config.py  main.py  validator.py
ms6-validateur-capteur/tests/: test_main.py  test_validator.py
(+5 files in other folders)
