[tool.poetry]
name = "ms6-validateur"
version = "0.1.0"
description = ""
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.136.1,<0.137.0"
uvicorn = ">=0.46.0,<0.47.0"
pydantic = ">=2.13.3,<3.0.0"
pytest = ">=9.0.3,<10.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
requests = "2.33.0"
urllib3 = ">=2.6.3"
idna = ">=3.7"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
